[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymetrics"
version = "1.0.10"
description = "Versatile metrics collection for Python"
readme = "README.rst"
license = {text = "Apache 2.0"}
authors = [
    {name = "Eventbrite, Inc.", email = "opensource@eventbrite.com"}
]
maintainers = [
    {name = "Eventbrite, Inc.", email = "opensource@eventbrite.com"}
]
keywords = ["metrics", "monitoring", "statsd", "datadog", "logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
requires-python = ">=3.7"
dependencies = [
    "attrs>=17.4,<22",
    "conformity>=1.28.2,<2.0",
    "six",
]

[project.optional-dependencies]
testing = [
    "freezegun",
    "pytest",
    "pytest-cov",
    "pytest-runner",
    "mock",
    "more-itertools~=5.0",
    "importlib-metadata~=5.0;python_version>\"3.6\"",
    "mypy~=1.0;python_version>=\"3.7\"",
    "types-six~=0.1.7;python_version>=\"3.7\"",
    "types-mock~=0.1.3;python_version>=\"3.7\"",
]
docs = [
    "sphinx~=2.2;python_version>=\"3.6\"",
]

[project.urls]
Homepage = "https://github.com/eventbrite/pymetrics"
Documentation = "https://pymetrics.readthedocs.io"
Repository = "https://github.com/eventbrite/pymetrics"
Issues = "https://github.com/eventbrite/pymetrics/issues"
CI = "https://travis-ci.org/eventbrite/pymetrics/"

[tool.setuptools.packages.find]
include = ["pymetrics", "pymetrics.*"]

[tool.setuptools.package-data]
pymetrics = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pymetrics.__version__"}

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = [
    "-s",
    "--junitxml=pytests.xml",
    "--cov=pymetrics",
    "--cov-branch",
    "--cov-fail-under=85",
    "--cov-report=term-missing"
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pymetrics"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "setup",
    "tasks",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "freezegun.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    ".env/*",
    "docs/*",
    "build/*",
    ".eggs/*",
    "*.egg-info/*",
    ".tox",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 2
use_parentheses = true
force_sort_within_sections = true
lines_after_imports = 2
skip_glob = [
    "*.git/*",
    "*.env/*",
    "*/docs/*",
    "*/build/*",
    "*/.eggs/*",
    "*.egg-info/*",
    ".tox",
]
not_skip = ["__init__.py"]
add_imports = [
    "__future__.absolute_import",
    "__future__.unicode_literals",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "CURRENT_PROJECT",
    "LOCALFOLDER",
    "TESTS",
]
no_lines_before = ["LOCALFOLDER"]
known_third_party = [
    "attr",
    "conformity",
    "currint",
    "dateutil",
    "freezegun",
    "py",
    "pycountry",
    "pytest",
    "pytz",
    "six",
]
known_current_project = "pymetrics"
known_tests = "tests"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
