[bdist_wheel]
python-tag=py27.py35.py36.py37.py38

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*,.tox
max-line-length = 120

[isort]
# Vertical Hanging Indent
multi_line_output = 3
# Formatting settings
line_length = 120
include_trailing_comma = 1
combine_as_imports = 1
force_grid_wrap = 2
use_parentheses = 1
force_sort_within_sections = 1
lines_after_imports = 2
skip_glob=*.git/*,*.env/*,*/docs/*,*/build/*,*/.eggs/*,*.egg-info/*,.tox
not_skip=__init__.py
add_imports=__future__.absolute_import,__future__.unicode_literals
# Section ordering
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,CURRENT_PROJECT,LOCALFOLDER,TESTS
no_lines_before=LOCALFOLDER
# Section for third party packages
known_third_party=attr,conformity,currint,dateutil,freezegun,py,pycountry,pytest,pytz,six
# Section for specific project imports
known_current_project=pymetrics
known_tests=tests

[mypy]
python_version = 3.7
check_untyped_defs = True
[mypy-setup]
ignore_errors = True
[mypy-tasks]
ignore_errors = True
[mypy-django.*]
ignore_missing_imports = True
[mypy-freezegun.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True

[aliases]
test=pytest

[tool:pytest]
junit_family = xunit2
addopts = -s --junitxml=pytests.xml --cov=pymetrics --cov-branch --cov-fail-under=85 --cov-report=term-missing
